--- a/term2.html
+++ b/term2.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="base.css" rel="stylesheet" type="text/css" />
     <script src="navbar.js"></script>
-    <title>Hello World!</title>
+    <title>Hello World! - Semester 2</title>
 </head>
 <body>
     <nav-bar />
