--- a/index.html
+++ b/index.html
@@ -9,6 +9,23 @@
     <title>Hello World!</title>
 </head>
 <body>
-    <nav-bar />
+    <nav-bar></nav-bar>
+    <div class="container">
+        <h1>[Our Project Name Here]</h1>
+        <p>[Our Project Description Here]</p>
+    </div>
+    <style>
+        .container {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-content: center;
+            height: 100vh;
+        }
+
+        .container * {
+            text-align: center;
+        }
+    </style>
 </body>
 </html>
