--- a/term1.html
+++ b/term1.html
@@ -13,25 +13,20 @@
     <div class="container">
         <div>
             <h3>Project Plan</h1>
-            <a href="#">Plan</a>
-            <a href="#">Presentation</a>
+            <a href="https://docs.google.com/document/d/1jcPMP1AMj9TvwDvqOpD516GPcQjdh4rWYdogDklIVkg/edit?usp=sharing">Plan</a>
         </div>
         <div>
             <h3>Milestone 1</h3>
-            <a href="#">Requirements</a>
-            <a href="#">Design</a>
-            <a href="#">Test</a>
-            <a href="#">Presentation</a>
-            <a href="#">Progress Evaluation</a>
+            <a href="https://docs.google.com/spreadsheets/d/1x6ObNsweesjeUn1sBRc2iiGUlQY774lU1T9COHaFtNM/edit?usp=sharing">Requirements</a>
+            <a href="https://drive.google.com/file/d/1wBUJNqoc_UweWFmIyDu1iTHcL3-0xLcu/view?usp=sharing">Progress Evaluation</a>
         </div>
         <div>
             <h3>Milestone 2</h3>
-            <a href="#">Presentation</a>
-            <a href="#">Progress Evaluation</a>
+            <a href="https://docs.google.com/presentation/d/1NX7ktl-NGoLUylMQFGaOVboNZ5kB59ceT2th-mnFKww/edit?usp=sharing">Presentation</a>
+            <a href="https://docs.google.com/document/d/1gV3FUFp90IARFxvx2YponRnBqj7G5x3uIPGJYdJ194I/edit?usp=sharing">Progress Evaluation</a>
         </div>
         <div>
             <h3>Milestone 3</h3>
-            <a href="#">Presentation</a>
             <a href="#">Progress Evaluation</a>
         </div>
     </div>
