added project plan slideshow

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                             <a href="https://docs.google.com/document/d/1cQvgZzwjybv6_6YzIgf8FMhbMtlAvady7iO7r6E9eEI/edit?usp=sharing">Plan</a>
                         </div>
                         <div class="doc-link">
-                            <a href="#">Presentation</a>
+                            <a href="https://docs.google.com/presentation/d/1ZOeS5Wz9VJyDcys0CEp4Ah-yoJJEHxAt62RKxLxQWaQ/edit?usp=sharing">Presentation</a>
                         </div>
 
                 </div>
