added milestone 4 report

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                         <a href="#">Presentation</a>
                     </div>
                     <div class="doc-link">
-                        <a href="#">Progress Evaluation</a>
+                        <a href="https://docs.google.com/document/d/1vd7SH8JjKIscXNJxhG3DRPBKglTSPUFyrlX2v-xC9Pw/edit?usp=sharing">Progress Evaluation</a>
                     </div>
 
                 </div>
