--- a/index.html
+++ b/index.html
@@ -92,6 +92,9 @@
                     <div class="doc-link">
                         <a href="https://docs.google.com/document/d/1kJuvkCe2gqQyGZh7E-H0kMba5Dddv8SH0R1hjOTcF9o/edit?usp=sharing">Progress Evaluation</a>
                     </div>
+                    <div class="doc-link">
+                        <a href="https://docs.google.com/document/d/17ghA6iW9qzB2KbZ0VHZYadpQi_mlwj-_oZJwuh2mQvY/edit?usp=sharing">Design Document</a>
+                    </div>
 
                 </div>
 
