--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                 
                     <p class="subtitle">Milestone 4</p>
                     <div class="doc-link">
-                        <a href="#">Presentation</a>
+                        <a href="https://docs.google.com/presentation/d/1TzzbNqKzjaAvYfT18hcvhyKW1NWcOdfFFlEKHYqE3vQ/edit?usp=sharing">Presentation</a>
                     </div>
                     <div class="doc-link">
                         <a href="https://docs.google.com/document/d/1vd7SH8JjKIscXNJxhG3DRPBKglTSPUFyrlX2v-xC9Pw/edit?usp=sharing">Progress Evaluation</a>
