--- a/index.html
+++ b/index.html
@@ -174,10 +174,10 @@
                         <a href="#">E-Book Page</a>
                     </div>
                     <div class="doc-link">
-                        <a href="#">Presentation</a>
+                        <a href="https://docs.google.com/presentation/d/1G0P-W5-5XA6BU60uzA4qOQ04AgvjKTFFwafQK5TtKOE/edit?usp=sharing">Presentation</a>
                     </div>
                     <div class="doc-link">
-                        <a href="#">Progress Evaluation</a>
+                        <a href="https://docs.google.com/document/d/10sUVM147HBDzbaa_vrNXjh2FZHoBzDPxRQElS2hH2HE/edit?usp=sharing">Progress Evaluation</a>
                     </div>
 
                 </div>
