report and dev manual

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 
                     <p class="subtitle">Milestone 6</p>
                     <div class="doc-link">
-                        <a href="#">User and/or Developer Manual</a>
+                        <a href="https://docs.google.com/document/d/13sRihRG03emcvM3Fhj4F8hsNx7BRXnMcGr0jWbqN08I/edit?usp=sharing">User and/or Developer Manual</a>
                     </div>
                     <div class="doc-link">
                         <a href="#">Demo Video</a>
@@ -195,7 +195,7 @@
                         <a href="#">Presentation</a>
                     </div>
                     <div class="doc-link">
-                        <a href="#">Progress Evaluation</a>
+                        <a href="https://docs.google.com/document/d/1U45mferKGvN14j7geh8tSXgL8U52hxrPuxF6eqh8reA/edit?usp=sharing">Progress Evaluation</a>
                     </div>
 
                 </div>
