slides and demos

--- a/index.html
+++ b/index.html
@@ -189,10 +189,13 @@
                         <a href="https://docs.google.com/document/d/13sRihRG03emcvM3Fhj4F8hsNx7BRXnMcGr0jWbqN08I/edit?usp=sharing">User and/or Developer Manual</a>
                     </div>
                     <div class="doc-link">
-                        <a href="#">Demo Video</a>
+                        <a href="https://drive.google.com/file/d/11894WkfcSUOakJvKS_sS1ykPB7c9k3DZ/view?usp=sharing">Hand Tracking Demo Video</a>
                     </div>
                     <div class="doc-link">
-                        <a href="#">Presentation</a>
+                        <a href="https://drive.google.com/file/d/1nAoE3qOFPCM7VVcHhXwZuPPG5bCECRy4/view?usp=sharing">Hardware Startup Demo Video</a>
+                    </div>
+                    <div class="doc-link">
+                        <a href="https://docs.google.com/presentation/d/1T7uXAZGckvS1XX05YegEnu_0n_Dc8AhmJiPlmi7CXK4/edit?usp=sharing">Presentation</a>
                     </div>
                     <div class="doc-link">
                         <a href="https://docs.google.com/document/d/1U45mferKGvN14j7geh8tSXgL8U52hxrPuxF6eqh8reA/edit?usp=sharing">Progress Evaluation</a>
